# iPodyssey

./: .gitignore  README.md  build.py  check_coverage.py  demo.sh  ipodyssey.spec  pyproject.toml  requirements.txt  run_gui.py  run_gui_standalone.py
ipodyssey/: __init__.py  __main__.py  cli.py  copier.py  explorer.py  extractor.py  gui.py  gui_progress.py  main.py  metadata.py  scanner.py
ipodyssey/database/: __init__.py  debug_parser.py  parser.py  playlist.py  structures.py
ipodyssey/exporters/: __init__.py  m3u.py  spotify.py  youtube.py
tests/: test_copier.py  test_explorer.py  test_gui_logic.py  test_main.py  test_parser.py  test_scanner.py
